--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "protractor-ext-po",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Extension for work with protractor page objects",
   "main": "dist/protractor-ext-po.js",
   "keywords": [
@@ -22,18 +22,17 @@
     "chai-as-promised": "^7.1.1",
     "chai-things": "^0.2.0",
     "copy-paste": "^1.3.0",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-release": "~0.6.1",
-    "load-grunt-tasks": "~0.4.0",
-    "path-is-absolute": "^1.0.0",
+    "grunt": "^1.0.2",
+    "grunt-cli": "^1.2.0",
+    "grunt-release": "^0.14.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "load-grunt-tasks": "^4.0.0",
+    "path-is-absolute": "^1.0.1",
     "protractor": "^5.2.0",
     "wnpm-ci": "latest",
     "grunt-protractor-runner": "^5.0.0",
     "deasync": "^0.1.10",
-    "mocha": "^4.0.1",
+    "mocha": "^5.2.0",
     "mochawesome-screenshots": "^1.5.9",
     "mocha-multi-reporters": "^1.1.7",
     "mocha-reportportal-agent": "^0.0.15"
