--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "protractor-ext-po",
-  "version": "1.0.5",
+  "version": "1.1.0",
   "description": "Extension for work with protractor page objects",
   "main": "dist/protractor-ext-po.js",
   "keywords": [
@@ -13,29 +13,30 @@
     "compile": "grunt compile"
   },
   "dependencies": {
-    "fs-extra": "^4.0.1",
-    "glob": "^7.0.3"
+    "fs-extra": "^7.0.1",
+    "glob": "^7.1.3"
   },
   "devDependencies": {
-    "bower": "^1.3.12",
-    "chai": "^4.1.2",
+    "bower": "^1.8.8",
+    "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-things": "^0.2.0",
     "copy-paste": "^1.3.0",
-    "grunt": "^1.0.2",
-    "grunt-cli": "^1.2.0",
+    "grunt": "^1.0.3",
+    "grunt-cli": "^1.3.2",
     "grunt-release": "^0.14.0",
     "grunt-contrib-concat": "^1.0.1",
     "load-grunt-tasks": "^4.0.0",
-    "path-is-absolute": "^1.0.1",
-    "protractor": "^5.2.0",
+    "path-is-absolute": "^2.0.0",
+    "protractor": "^5.4.2",
     "wnpm-ci": "latest",
     "grunt-protractor-runner": "^5.0.0",
-    "deasync": "^0.1.10",
-    "mocha": "^5.2.0",
-    "mochawesome-screenshots": "^1.5.9",
+    "deasync": "^0.1.14",
+    "mocha": "^6.0.2",
+    "mochawesome-screenshots": "^1.6.0",
     "mocha-multi-reporters": "^1.1.7",
-    "mocha-reportportal-agent": "^0.0.15"
+    "mocha-reportportal-agent": "^0.2.3",
+    "underscore": "^1.9.1"
   },
   "author": "Andrei Belousov",
   "license": "MIT",
